src/test/ui/error-codes/E0106.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:12:8
   |
12 |     x: &bool,
   |        ^ expected lifetime parameter

error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:17:7
   |
17 |     B(&bool),
   |       ^ expected lifetime parameter

error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:20:14
   |
20 | type MyStr = &str;
   |              ^ expected lifetime parameter

error[E0106]: missing lifetime specifier
  --> $DIR/E0106.rs:27:10
   |
27 |     baz: Baz,
   |          ^^^ expected lifetime parameter

error[E0106]: missing lifetime specifiers
  --> $DIR/E0106.rs:30:11
   |
30 |     buzz: Buzz,
   |           ^^^^ expected 2 lifetime parameters

error: aborting due to 5 previous errors

If you want more information on this error, try using "rustc --explain E0106"
